<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">

        <TextView
            android:id="@+id/textview_login_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:gravity="center"
            android:textSize="26sp"
            android:text="@string/enter_login_details"/>

        <TextView
            android:id="@+id/textview_login_username"
            android:labelFor="@id/edittext_login_username"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minHeight="50dp"
            android:textSize="20sp"
            android:text="@string/username"/>
        <EditText
            android:id="@+id/edittext_login_username"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:autofillHints="username"/>

        <TextView
            android:id="@+id/textview_login_password"
            android:labelFor="@id/edittext_login_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minHeight="50dp"
            android:textSize="20sp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/edittext_login_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:autofillHints="password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_columnSpan="2">
            <Button
                android:id="@+id/button_login_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_columnSpan="2">
            <Button
                android:id="@+id/button_create_account_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/create_account" />
        </LinearLayout>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>